landscape orientation step2

--- a/application/src/main/res/layout-land/fragment_page_month.xml
+++ b/application/src/main/res/layout-land/fragment_page_month.xml
@@ -1,17 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     >
-    <com.jess.ui.TwoWayGridView
-        android:id="@+id/fragment_page_month_gv_month_greed"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:numRows="6"
-        app:scrollDirectionLandscape="horizontal"
-        app:scrollDirectionPortrait="horizontal"
+        android:layout_height="40sp"
+        android:orientation="horizontal"
+        android:background="@color/color_calendar_date_background_deselected"
+        >
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="PN"
+            android:gravity="center"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="VT"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="SR"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="CH"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="PT"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="SB"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="VS"
+            />
+    </LinearLayout>
+    <com.jess.ui.TwoWayGridView
+        android:id="@+id/fragment_page_month_gv_month_greed1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/color_calendar_date_background_deselected"
+        app:scrollDirectionLandscape="vertical"
+        app:numColumns="7"
         />
 </LinearLayout>
