--- a/application/src/main/res/layout-land/item_grid_view_grid_calendar.xml
+++ b/application/src/main/res/layout-land/item_grid_view_grid_calendar.xml
@@ -2,26 +2,16 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/color_calendar_date_background_deselected"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
-    <TextView
-        android:id="@+id/item_grid_view_day_of_week"
-        android:layout_width="44sp"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:textSize="16sp"
-        android:textColor="@color/color_calendar_day_of_week_names"
-        android:gravity="center"
-        />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         >
         <ksayker.affairscalendar.views.DateTextView
-            android:id="@+id/item_grid_view_date"
+            android:id="@+id/item_grid_view_date1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/colorPrimary"
@@ -40,5 +30,4 @@
             android:background="@drawable/background_affairs_number"
             />
     </FrameLayout>
-
 </LinearLayout>
