--- a/application/src/main/res/layout/activity_main.xml
+++ b/application/src/main/res/layout/activity_main.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="ksayker.affairscalendar.activities.MainActivity"
-    >
+    android:orientation="vertical">
 
     <ksayker.affairscalendar.views.CalendarViewPager
         android:id="@+id/activity_main_vp_calendar"
